--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Milano</h1>
     <p>Milano è una città vibrante del nord Italia, famosa per la sua attività finanziaria, commerciale e di moda, il suo patrimonio artistico (come la chiesa di Santa Maria delle Grazie con il "Cenacolo" di Leonardo), e il suo stile di vita all'avanguardia con negozi di lusso, ristoranti gourmet e vita notturna. È multiculturale e attrae visitatori da tutto il mondo.</p>
+    <a href="{{url_for('immagini')}}">Immagini monumenti</a>
 </body>
 </html>
